AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libanalyser.a

libanalyser_a_SOURCES = analy.cc analy.h analy_alpha.cc analy_alpha.h \
analy_names.cc analy_names.h analy_x86.cc analy_x86.h analyinfo.h \
code_analy.cc code_analy.h data_analy.cc data_analy.h \
language.cc language.h pe_analy.cc pe_analy.h stddata.cc stddata.h \
elf_analy.cc elf_analy.h analy_register.cc analy_register.h \
coff_analy.cc coff_analy.h analy_java.cc analy_java.h \
class_analy.cc class_analy.h ne_analy.cc ne_analy.h \
analy_il.cc analy_il.h analy_ia64.cc analy_ia64.h le_analy.cc le_analy.h \
analy_ppc.cc analy_ppc.h macho_analy.cc macho_analy.h flt_analy.cc flt_analy.h \
xbe_analy.cc xbe_analy.h pef_analy.cc pef_analy.h analy_arm.cc analy_arm.h \
xex_analy.cc xex_analy.h analy_avr.cc analy_avr.h

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/asm -I$(top_srcdir)/io/@IO_DIR@ -I$(top_srcdir)/io -I$(top_srcdir)/output -I$(top_srcdir)/eval

